--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                 </div>
                 <!-- Project 4 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden group">
-                    <img src="https://placehold.co/600x400/e2e8f0/333333?text=Webel+Bhavan+Solar" alt="Project Four" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/e2e8f0/333333?text=High+Rise+Building+Solar" alt="Project Four" class="w-full h-56 object-cover group-hover:scale-105 transition-transform duration-300">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Solar Plant at Webel Bhavan</h3>
-                        <p class="text-gray-700 mb-4">Successfully handled the complete installation and ongoing maintenance for the solar power plant at the prestigious Webel Bhavan.</p>
+                        <h3 class="text-xl font-semibold mb-2">Solar Plant at High Rise Building</h3>
+                        <p class="text-gray-700 mb-4">Successfully handled the complete installation and ongoing maintenance for the solar power plant at a prestigious High Rise Building.</p>
                         <a href="#contact" class="text-indigo-600 hover:underline">Learn More</a>
                     </div>
                 </div>
